bigger layout for word game

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -23,6 +23,7 @@
 	<p>There are the following interfaces available:</p>
 	<ul>
 		<li><a href="/demo">Demo</a></li>
+		<li><a href="/guess_the_word">Guess the word</a></li>
 	</ul>
 </body>
 
